--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,18 @@
 @import url("photographer.css");
+:root {
+    --primary: #901C1C;
+    --secondary: #DB8876;
+    --gray :#757575;
+}
 
 body {
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* max-width: 1440px;
+    margin: auto; */
+
 }
 
 
@@ -15,7 +25,7 @@ header {
 }
 
 h1 {
-    color: #901C1C;
+    color: var(--primary);
     margin-right: 100px;
 }
 
@@ -39,12 +49,52 @@ h1 {
     flex-direction: column;
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+.photographer_section article a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-decoration: none;
 }
 
-.photographer_section article img {
+.photographer_section article a h2 {
+    color: var(--secondary);    
+    font-size: 36px;
+    font-weight: 400;
+}
+
+.photographer_section article a img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+h2,
+h3,
+P {
+    margin: 0; 
+}
+.description {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.country {
+    color: var(--primary);
+    font-size: 16px;
+}
+
+.tagline {
+font-size: 14px;
+font-weight: 400;
+}
+
+.price {
+    color: var(--gray);
+
+font-size: 14px;
+font-weight: 400;
+
 }
