Ajout des dernières fonctionnnalités
- Récupération des données JSON dans la page photograph.html.
- Finaliser le modal Contact.
- Le système filtrage (popularité, dates, titre) via dropdown
- Intégration du lightbox

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,11 +1,67 @@
-#contact_modal {
-    display: none;
+
+body {
+    display: flex;
+    flex-direction: column;
+    /* max-width: 1440px;
+    margin: auto; */
+    justify-content: center;
 }
 
+h1, 
+h2,
+h3,
+h4,
+p{
+    margin: 0
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.photograph-info {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    padding-left: 45px;
+}
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.img-container{
+    padding-right: 45px;
+}
+
+.photograph-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.photograph-name {
+    color: var(--secondary);
+    font-size: 64px;
+    font-weight: 400;
+    margin-inline-end: 0;
+    /* TODO: revoir le width du h1 */
+    max-width: 300px;
+    
+}
+
+.photograph-country {
+    color: var(--primary);
+    font-size: 24px;
+    font-weight: 400;
 }
 
 .contact_button {
@@ -19,12 +75,135 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    transition: all 0.3s;
 }
 
+.contact_button:hover {
+    background-color: var(--secondary);
+    color: black;
+}
+
+.photograph-content {
+    margin: 45px 100px;
+    position: relative;
+}
+.photograph-content .sorting-media label {
+    color: #000;
+    font-size: 18px;
+    font-weight: 700;
+    margin-right: 20px;
+}
+
+.photograph-content .sorting-media #media-select {
+    background-color: var(--primary);
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 20px;
+    border-radius: 5px;
+    border: none;
+    
+} 
+.photograph-content .sorting-media #media-select option {
+    font-size: 18px;
+    font-weight: 700;
+    padding: 20px;
+}
+
+.photograph-content .result-medias {
+    margin-top: 25px;
+    display: flex;
+    flex-direction: row;
+    column-gap: 3%;
+    flex-wrap: wrap;
+}
+
+.photograph-content .result-medias .media-infos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom:25px;
+    width: 30%;
+}
+
+.photograph-content .result-medias .media-infos .media-description {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /* width: 350px; */
+    width: auto;
+}
+.media-description .media-name {
+    color: var(--primary);
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.photograph-content .result-medias .media-infos .favorite {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 7px;
+
+}
+
+/* .favorite .icons-heart {
+    display: flex;
+
+} */
+.favorite.number {
+    font-size: 16px;
+    font-weight: 400;
+}
+.favorite button {
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    color: var(--primary);
+}
+
+ .fa-solid.fa-heart-fill {
+    display: none;
+   
+}
+
+
+.photograph-content .result-medias .media-infos img,
+.photograph-content .result-medias .media-infos video
+ {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-radius: 5px
+}
+
+/* Modale pour formulaire */
+/* #contact_modal {
+    display: none;
+
+    position: absolute;
+    top: 50px;
+    height: 100vh;
+    align-self: center;
+    width: 80%;
+    background-color: transparent;
+    z-index: 10;
+
+} */
+/* .bg {
+    display:none;
+    position:fixed;
+    top: 0;
+    background-color: gray;
+    opacity: 0.3;
+    width: 100%;
+    height: 100vh;
+   
+} */
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,16 +215,19 @@
 .modal header {
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 40px;
+    column-gap: 10px;
 }
 
 .modal header img {
+    align-self: flex-start;
     cursor: pointer;
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 42px;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
 }
 
 form {
@@ -68,9 +250,259 @@ form div {
     margin-bottom: 26px;
 }
 
-form input {
+form input,
+textarea {
     width: 100%;
     height: 68px;
     border: none;
     border-radius: 5px;
+    font-size: 24px;
+}
+
+.input-error {
+    border: 2px red solid;
+
+}
+.error{
+    /* display: block; */
+    margin-bottom: 20px;
+    transform: translate(20px);
+    color: #cc0000;
+}
+
+form textarea {
+    width: 100%;
+    height: 150px;
+}
+
+/* card price */
+.card-price {
+   
+    width: 376px;
+    height: 89px;
+    background-color: var(--secondary);
+    bottom: 0;
+    right:30px ;
+    border-radius: 5px; 
+    font-size: 24px;
+    
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.sum-likes {
+    padding-left: 30px;
+}
+.card-price i {
+    padding-left: 10px;
+}
+
+.price-per-day{
+    padding-right: 30px;
+    flex-grow: 1;
+    text-align: right;
+}
+
+/* lightbox */
+#lightbox, 
+#contact_modal {
+    display:none; 
+    justify-content: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    
+
+}
+
+#lightbox {
+    background-color: white;
+    z-index: 100;
+}
+#contact_modal {
+    background: rgb(0, 0, 0, .5);
+    z-index: 50;
+    overflow: auto;
+}
+
+.lightbox-content {
+    position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: auto;
+  animation: lightboxIn .7s
+}
+.lightbox-content .lightbox-image{
+    max-width: 95%;
+    height: 90vh;
+    object-fit: contain;
+}
+
+.lightbox-content .img-title,
+.lightbox-content .video-title
+ {
+    color: var(--primary);
+    align-self: center;
+}
+
+.lightbox-content .video-title {
+    margin-top: 15px
+}
+
+.lightbox-content .lightbox-video{
+     
+    width: 80%;
+    height: auto;
+    object-fit: contain;
+  }
+#lightbox .btn-close-lightbox {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 30;
+}
+#lightbox .btn-previous {
+    position: fixed;
+    /* top: 50%; */
+    height: 100vh;
+    background-color: transparent;
+    left: 15px;
+}
+#lightbox .btn-next {
+    position: fixed;
+    /* top: 50%; */
+    height: 100vh;
+   background-color: transparent;
+    right: 15px;
+}
+#lightbox button {
+    font-size: 36px;
+    color: var(--primary);
+    background: transparent;
+    border: none;
+    opacity: .5;
+    transition: all .3s;
+    cursor: pointer;
+    z-index: 20;
+}
+
+#lightbox button:hover {
+    opacity: 1;
+    background-color: white;
+}
+
+@keyframes lightboxIn {
+    from {
+        opacity: 0
+    } to {
+        opacity: 1;
+    }
+}
+
+/* customize sorting section */
+.sort {
+    margin-top:12px;
+    display: flex;
+
+}
+.sort h3 {
+    padding: 20px 20px 20px 0;
+}
+.dropdown {
+    position: relative;
+    background-color: var(--primary);
+    width: 170px;
+    padding-top: 5px;
+    border-radius: 5px;
+}
+
+.dropdown button.dropdown-toggle {
+    width: 150px;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    cursor: pointer;
+
+    background-color: var(--primary);
+    
+}
+.dropdown-opened{
+border-bottom-left-radius: 0;
+border-bottom-right-radius: 0;
+
+}
+.dropdown-toggle-text{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 20px;
+    width: 90%;
+    padding: 15px;
+    
+}
+
+button.dropdown-toggle .chevron-up{
+    display:none;
+}
+
+.dropdown .options{
+    /* menu fermé par défaut */
+    display: none;
+    width: 170px;
+    position: absolute;
+
+    flex-direction: column;
+    background-color: var(--primary);
+    box-shadow:  0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    overflow: hidden;
+    
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    z-index: 11;
+    
+
+}
+
+.dropdown .options button{
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+
+    border: none;
+    border-image: none;
+    outline: none;
+    cursor: pointer;
+
+    text-align: left;
+    background-color: var(--primary);
+}
+.border-top{
+    border-top:white solid 1px;
+}
+.dropdown .options button span{
+    display: flex;
+    width: 80%;
+    padding: 15px;
+}
+.dropdown .options button:hover,
+.dropdown .options button:focus
+{
+    background-color: #DB8876;
+    outline: none;
+}
+.option--hidden{
+    display:none;
+}
+.option--display{
+    display: block;
+
 }
